--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,11 +7,11 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/msdp?useSSL=false&serverTimezone=UTC
     username: root
-    password: root
+    password: 123456
   redis:
     host: 127.0.0.1
     port: 6379
-    password: root
+    password: 123456
     lettuce:
       pool:
         max-active: 10
